# vllm-stack-yellow-zone

./: .gitattributes  .gitignore  .gitmodules  README.md
docs/: vllm-pair-elastic-deployment.md  yellow-zone-xlite-vcann-rt-remote-state.md
patches/: vllm-ascend-v0.19.1rc1-deadlock-diagnostics.patch  vllm-ascend-vcann-prefill-guard.patch  vllm-pair-elastic-scheduling.patch  vllm-vcann-deterministic-scheduling.patch
scheduler/: .gitignore  Dockerfile.e2e  README.md  install-pair-scheduler.sh  pyproject.toml  setup.py
scheduler/benchmarks/: handoff.py
scheduler/src/vllm_pair_scheduler/: __init__.py  config.py  gate.py  inspect.py
scheduler/src/vllm_pair_scheduler/native/: __init__.py  pair_sched.c
scheduler/tests/: fake_engine.py  test_config.py  test_engine_boundary.py  test_native_scheduler.py  test_startup_order.py  test_vllm_engine_core_integration.py  verify_trace.py
scripts/: TWO_CONTAINER_XCCL.md  collect-ctr-two-container-env.sh  probe-xccl-hold-vs-qwen3-ops.py  probe-xccl-hold-vs-vector-two-container.py  probe-xccl-hold-vs-vector.py  repro-tp8-hccl-deadlock.py  repro-tp8-xlite-xccl-deadlock-two-container.py  repro-tp8-xlite-xccl-deadlock.py  restart-vcann-xlite-containers.sh  run-tp8-xlite-ab-control.sh  two_container_control.py
scripts/deadlock-diagnostics/: README.md  apply_site_packages_patch.sh  collect_two_containers.sh  collect_two_ctr_containers.sh  collect_vcann_deadlock.py  deadlock_snapshot.py  (+4 more)
vcann-rt/: active_device_selection.patch  aicore_limiter.patch  code_check.patch  first_version.patch  v1_code_check.patch  v2_code_check.patch
(+64 files in other folders)
