[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-pair-scheduler"
version = "0.4.0"
description = "Same-host WorkerProc forward admission control for a pair of vLLM instances"
requires-python = ">=3.10"

[project.scripts]
vllm-pair-scheduler-inspect = "vllm_pair_scheduler.inspect:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
